# pycodemark

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: codemark.yml
src/codemark/: __init__.py  analyzer.py  config.py  console.py  plugins.py  renderer.py  reporter.py  smart_reviewer.py
src/pycodemark/: __init__.py  ai_client.py  analyzer.py  config.py  console.py  evaluator.py  fixer.py  logger.py  plugins.py  renderer.py  reporter.py  sample_plugin.py  smart_reviewer.py  test_generator.py  version.py
tests/: test_basic.py
