[tool.poetry]
name = "pycodemark"
version = "0.5.0"
description = "PyCodemark – a full-featured code review tool for Python."
authors = ["Roshan <roshanguptamca@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/roshanguptamca/pycodemark/"
repository = "https://github.com/roshanguptamca/pycodemark/"
documentation = "https://github.com/roshanguptamca/pycodemark/blob/main/README.md"
keywords = ["python", "code", "review", "linter", "cli", "static-analysis", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities"
]
packages = [{include = "pycodemark", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
rich = "^14.0"
tomli = "^2.0"
openai = "^2.6.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.0.280"
pre-commit = "^3.3.3"
setuptools-scm = "^9.2.2"
black = "^25.9.0"

[tool.poetry.scripts]
pycodemark = "pycodemark.console:main"


[tool.ruff]
line-length = 120

[pycodemark]
max_line_length = 120
insert_docstrings = true
ignore_rules = ["type_hints"]
checks = {style = true, clarity = true, docstrings = true, bugs = true, ai_review = true}
model = "gpt-5"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
